--- a/gimmenow.html
+++ b/gimmenow.html
@@ -30,7 +30,7 @@
 <body>
   <div class="bar">
     <!-- <button id="copyBtn" class="btn">Copy</button> -->
-    <button id="copyBtn" type="button" data-size="small" data-hotkey="Control+C" class="btn" tooltip="This is supposed to be the easy modern copy icon, sorry but it's actually cool, good luck seeing this tooltip on a touchscreen thou">
+    <button id="copyBtn" type="button" data-size="small" data-hotkey="Control+C" class="btn" title="This is supposed to be the easy modern copy icon, sorry but it's actually cool, good luck seeing this tooltip on a touchscreen thou">
       <svg aria-hidden="true" focusable="false" class="octicon octicon-copy" viewBox="0 0 16 16" width="16" height="16" fill="currentColor" display="inline-block" overflow="visible" style="vertical-align: text-bottom;">
       <path d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 0 1 0 1.5h-1.5a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 0 0 .25-.25v-1.5a.75.75 0 0 1 1.5 0v1.5A1.75 1.75 0 0 1 9.25 16h-7.5A1.75 1.75 0 0 1 0 14.25Z"></path>
       <path d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0 1 14.25 11h-7.5A1.75 1.75 0 0 1 5 9.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"></path>
@@ -70,14 +70,15 @@ Query params:
       displayText = transformForDisplayFromJSONStringValue(directValue);
       meta.textContent = 'source: ?value (direct)';
     } else {
+      meta.textContent = 'source origin:  → ' + params.get('origin');
       const target = params.get('u') || params.get('origin');
       const jsonPath = params.get('jsonpath') || 'props.pageProps.data.mainQuery.bot.promptPlaintext';
-      if (!target || !jsonPath) throw new Error('Missing ?u= and/or ?jsonpath=');
+      if (!target || !jsonPath) throw new Error('Missing ?u= with the poe bot URL: e.g. ?u=https://poe.com/GiveQuinnMoney');
 
       let resp = await safeFetch(target);
       if (!resp || !resp.ok || resp.type === 'opaque') {
         if (!target) throw new Error('Direct fetch blocked (likely CORS), try to avoid fidting provided CORS thing bypass -and keep it going on for everyone, please?-. If you are seeing this without a clue, it\'s shit that it\'s failing -my bad-, nothing you did, sorry this easy fix broke too the workaround of the other stuff.');
-        resp = await safeFetch(target);
+        resp = await safeFetch('https://gimme-me-the-prompt.replit.app/blackout/powerofget?url=' + target);
       }
       if (!resp.ok) throw new Error('HTTP ' + resp.status);
 
