Implement copyText function for clipboard access
Added an async function to copy text to clipboard.

--- a/gimmenow.html
+++ b/gimmenow.html
@@ -160,6 +160,13 @@ Query params:
     return s;*/
   }
   
+  async function copyText(text) {
+    if (navigator.clipboard?.writeText) return navigator.clipboard.writeText(text);
+    const ta = document.createElement('textarea');
+    ta.value = text; ta.style.position = 'fixed'; ta.style.left = '-1000px';
+    document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
+  }
+  
 })();
 
 </script>
