Change title to 'Poe extra mojo to show public prompts'

--- a/gimmenow.html
+++ b/gimmenow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Raw string viewer (wrapped, copyable)</title>
+  <title>Poe extra mojo to show public prompts</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     :root { color-scheme: light dark; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
